--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,10 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_home"
             android:title="Home"
             android:icon="@drawable/ic_baseline_home_24"/>
+
 
         <item
             android:id="@+id/nav_profile"
@@ -26,6 +28,18 @@
             android:id="@+id/nav_feed"
             android:title="Feedback"
             android:icon="@drawable/ic_baseline_feedback_24"/>
+
+        <item android:id="@+id/nav_settings"
+            android:title="Settings"
+            android:icon="@drawable/ic_baseline_settings_24"/>
+
+
+
+        <item
+            android:id="@+id/nav_log_out"
+            android:title="Log out"
+            android:icon="@drawable/ic_baseline_logout_24"/>
+
 
     </group>
 </menu>
