--- a/app/src/main/res/layout/fav_fragment.xml
+++ b/app/src/main/res/layout/fav_fragment.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".settings_fragment">
+    android:background="@color/purple_500"
+    tools:context=".profile_fragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
-        android:text="Hello search Fragment"
+        android:text="Here are your Favourite threads"
         android:textStyle="bold"
-        android:textSize="60dp"/>
+        android:textSize="50dp"
+        android:textAlignment="center"/>
 
 </FrameLayout>
