--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#000000"
             android:hint="First Name"
+            android:autofillHints="name"
             android:drawableRight="@drawable/ic_baseline_account_circle_24"
             android:textColor="@color/black"
             android:textColorHint="@color/black"/>
@@ -64,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
                 android:hint="Last Name"
+                android:autofillHints="name"
                 android:drawableRight="@drawable/ic_baseline_account_circle_24"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"/>
@@ -84,6 +86,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
                 android:hint="Email"
+                android:autofillHints="emailAddress"
                 android:inputType="textEmailAddress"
                 android:drawableRight="@drawable/ic_baseline_email_24"
                 android:textColor="@color/black"
@@ -103,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
                 android:hint="Contact No."
+                android:autofillHints="phone"
                 android:inputType="phone"
                 android:drawableRight="@drawable/ic_baseline_smartphone_24"
                 android:textColor="@color/black"
@@ -122,6 +126,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
                 android:hint="Institute"
+                android:autofillHints="name"
                 android:drawableRight="@drawable/ic_baseline_school_24"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"/>
@@ -140,6 +145,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
                 android:hint="Password"
+                android:autofillHints="password"
                 android:inputType="textPassword"
                 android:drawableRight="@drawable/ic_baseline_vpn_key_24"
                 android:textColor="@color/black"
@@ -159,6 +165,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
                 android:hint="Confirm Password"
+                android:autofillHints="password"
                 android:inputType="textPassword"
                 android:drawableRight="@drawable/ic_baseline_vpn_key_24"
                 android:textColor="@color/black"
@@ -170,26 +177,9 @@
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:text="Sign Up"
+            android:layout_marginTop="7dp"
             android:background="@drawable/ripple"
-            />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            android:text="Sign Up" />
 
 
     </LinearLayout>
