--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,11 @@
     android:background="@drawable/capture"
     tools:context=".MainActivity">
 
-
     <TextView
         android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="100dp"
         android:text="My Account"
         android:textColor="@color/black"
         android:textSize="25dp"
@@ -44,10 +43,11 @@
 
 
             <EditText
+                android:id="@+id/login_email_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
-                android:hint="Username"
+                android:hint="Email"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black" />
 
@@ -63,6 +63,7 @@
             android:padding="5dp">
 
             <EditText
+                android:id="@+id/login_pass_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
@@ -99,12 +100,12 @@
             android:textSize="15dp" />
 
         <Button
-            android:id="@+id/SignInLogin"
+            android:id="@+id/login_bt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
             android:background="@drawable/ripple"
-            android:text="Sign In"
+            android:text="Login"
             android:textStyle="bold" />
 
 
@@ -122,7 +123,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textview" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signup_btn"
         android:layout_width="100dp"
         android:layout_height="60dp"
         android:layout_marginLeft="200dp"
@@ -133,19 +134,6 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact Us"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="115dp"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
