--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,6 +42,7 @@
         android:padding="5dp">
 
         <EditText
+            android:id="@+id/signup_firstname_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#000000"
@@ -61,6 +62,7 @@
             android:padding="5dp">
 
             <EditText
+                android:id="@+id/signup_lastname_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
@@ -82,6 +84,7 @@
             android:padding="5dp">
 
             <EditText
+                android:id="@+id/signup_email_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
@@ -102,6 +105,7 @@
             android:padding="5dp">
 
             <EditText
+                android:id="@+id/signup_contact_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
@@ -122,6 +126,7 @@
             android:padding="5dp">
 
             <EditText
+                android:id="@+id/signup_institute_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
@@ -141,6 +146,7 @@
             android:padding="5dp">
 
             <EditText
+                android:id="@+id/signup_password_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
@@ -161,6 +167,7 @@
             android:padding="5dp">
 
             <EditText
+                android:id="@+id/signup_confirm_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#000000"
@@ -174,6 +181,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/signup_signup_btn"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
@@ -183,9 +191,4 @@
 
 
     </LinearLayout>
-
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
