--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -16,4 +16,9 @@
         android:title="Search"
         android:icon="@drawable/ic_baseline_search_24"/>
 
+    <item
+        android:id="@+id/profile"
+        android:title="Profile"
+        android:icon="@drawable/ic_person"/>
+
 </menu>
